--- a/client/src/CSS/scss_partials/home/account/_accountModal.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountModal.scss
@@ -9,7 +9,7 @@
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
-		border: v.$base-modal-border-width solid black;
+		//border: v.$base-modal-border-width solid black;
 		border-radius: 15px;
 		background-color: white;
 		padding: 30px;
@@ -20,13 +20,11 @@
 	}
 
 	.back-button {
-		@include m.back-exit-buttons();
-		left: 15px;
+		@include m.back-button();
 	}
 
 	.exit-button {
-		@include m.back-exit-buttons();
-		right: 15px;
+		@include m.exit-button();
 	}
 
 	.title {
